Set up game play logic and interval timer

--- a/index.html
+++ b/index.html
@@ -31,49 +31,48 @@
                   <div id="game">
                    <div id="player-one-hand">
                           <br/><h2>Player One:</h2>
-                        <img class="rpsls-button" value="rock" src="assets/images/rock.jpg">
-                        <img class="rpsls-button" value="paper" src="assets/images/paper.jpg">
-                        <img class="rpsls-button" value="scissors" src="assets/images/scissors.jpg">
-                        <img class="rpsls-button" value="lizard" src="assets/images/lizard.jpg">
-                        <img class="rpsls-button" value="spock" src="assets/images/spock.jpg">
+                        <img class="one-rpsls-button" id="Rock" src="assets/images/rock.jpg">
+                        <img class="one-rpsls-button" id="Paper" src="assets/images/paper.jpg">
+                        <img class="one-rpsls-button" id="Scissors" src="assets/images/scissors.jpg">
+                        <img class="one-rpsls-button" id="Lizard" src="assets/images/lizard.jpg">
+                        <img class="one-rpsls-button" id="Spock" src="assets/images/spock.jpg">
                       </div>
                     <div class="battleground">
                     <!-- <img id="player-one-hand" src="assets/images/spock.jpg"><br/> -->
-                      <br/><h2 id="announcement">Player One Wins!
-                        <br/>Rock beats Scissors
+                      <br/><h2 id="announcement">
                       </h2>
                     <img id="vs-logo" src="assets/images/vs.jpg"><br/>  
                     <!-- <img id="player-two-hand" src="assets/images/spock.jpg"> -->
                     <div>
                       <table id="score">
                         <tr>
-                          <th padding="15px">Score</th>
-                          <th padding="15px">Player One</th>
-                          <th padding="15px">Player Two</th>
+                          <th padding: "15px";>Score</th>
+                          <th padding: "15px";>Player One</th>
+                          <th padding: "15px";>Player Two</th>
                         </tr>
                         <tr>
                           <td>Wins</td>
-                          <td><span id="one-wins">1</span></td>
-                          <td><span id="two-wins">2</span></td>
+                          <td><span id="one-wins"></span></td>
+                          <td><span id="two-wins"></span></td>
                         </tr>
                         <tr>
                           <td>Losses</td>
-                          <td><span id="one-loss">3</span></td>
-                          <td><span id="two-loss">2</span></td>
+                          <td><span id="one-loss"></span></td>
+                          <td><span id="two-loss"></span></td>
                         </tr>
                         <tr>
                           <td>Ties</td>
-                          <td colspan="2"><span id="ties"">2</span></td>
+                          <td colspan="2"><span id="ties"></span></td>
                         </tr>
                       </table>
                     </div>
                     <div id="player-two-hand">
                         <br/><h2>Player Two:</h2>
-                      <img class="rpsls-button" value="rock" src="assets/images/rock.jpg">
-                      <img class="rpsls-button" value="paper" src="assets/images/paper.jpg">
-                      <img class="rpsls-button" value="scissors" src="assets/images/scissors.jpg">
-                      <img class="rpsls-button" value="lizard" src="assets/images/lizard.jpg">
-                      <img class="rpsls-button" value="spock" src="assets/images/spock.jpg">
+                      <img class="two-rpsls-button" id="Rock" src="assets/images/rock.jpg">
+                      <img class="two-rpsls-button" id="Paper" src="assets/images/paper.jpg">
+                      <img class="two-rpsls-button" id="Scissors" src="assets/images/scissors.jpg">
+                      <img class="two-rpsls-button" id="Lizard" src="assets/images/lizard.jpg">
+                      <img class="two-rpsls-button" id="Spock" src="assets/images/spock.jpg">
                     </div>
                   </div>
 
