--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                   <hr>
                   <div id="game">
                    <div id="player-one-hand">
-                          <br/><h2>Player One:</h2>
-                        <img class="one-rpsls-button" id="Rock" src="assets/images/rock.jpg">
-                        <img class="one-rpsls-button" id="Paper" src="assets/images/paper.jpg">
-                        <img class="one-rpsls-button" id="Scissors" src="assets/images/scissors.jpg">
-                        <img class="one-rpsls-button" id="Lizard" src="assets/images/lizard.jpg">
-                        <img class="one-rpsls-button" id="Spock" src="assets/images/spock.jpg">
+                          <br/><h2>Player One:<span id="locked" style="color: greenyellow"></span></h2>
+                        <img class="player-one one-rpsls-button" id="Rock" src="assets/images/rock.jpg">
+                        <img class="player-one one-rpsls-button" id="Paper" src="assets/images/paper.jpg">
+                        <img class="player-one one-rpsls-button" id="Scissors" src="assets/images/scissors.jpg">
+                        <img class="player-one one-rpsls-button" id="Lizard" src="assets/images/lizard.jpg">
+                        <img class="player-one one-rpsls-button" id="Spock" src="assets/images/spock.jpg">
                       </div>
                     <div class="battleground">
                     <!-- <img id="player-one-hand" src="assets/images/spock.jpg"><br/> -->
@@ -68,11 +68,11 @@
                     </div>
                     <div id="player-two-hand">
                         <br/><h2>Player Two:</h2>
-                      <img class="two-rpsls-button" id="Rock" src="assets/images/rock.jpg">
-                      <img class="two-rpsls-button" id="Paper" src="assets/images/paper.jpg">
-                      <img class="two-rpsls-button" id="Scissors" src="assets/images/scissors.jpg">
-                      <img class="two-rpsls-button" id="Lizard" src="assets/images/lizard.jpg">
-                      <img class="two-rpsls-button" id="Spock" src="assets/images/spock.jpg">
+                      <img class="player-two" id="Rock" src="assets/images/rock.jpg">
+                      <img class="player-two" id="Paper" src="assets/images/paper.jpg">
+                      <img class="player-two" id="Scissors" src="assets/images/scissors.jpg">
+                      <img class="player-two" id="Lizard" src="assets/images/lizard.jpg">
+                      <img class="player-two" id="Spock" src="assets/images/spock.jpg">
                     </div>
                   </div>
 
@@ -85,9 +85,6 @@
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
       <!-- The core Firebase JS SDK is always required and must be listed first -->
       <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
-    </script>
-    <script>
-    
     </script>
     <script src="assets/javascript/script.js"></script>
 </body>
