Added a game number variable to keep track of how many games you've played

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                   <h1>Rock-Paper-Scissors-Lizard-Spock</h1>
                   <hr>
                   <h2 id="announcement">
+                      <span id="game-num"></span>
+                      <span id="winner-is"></span>
                     </h2>
                       <table id="battleground">
                         <tr>
@@ -84,7 +86,7 @@
                       <img class="player-two" id="Spock" src="assets/images/spock.jpg">
                     </div> -->
                   <!-- </div> -->
-
+                    <!-- <button>Restart Game</button> -->
    
                 </section>
             
